--- a/public/home.html
+++ b/public/home.html
@@ -24,7 +24,7 @@
         </div>
         <ul class="navlinks">
             <li><a class="links">Home</a></li>
-
+            <li><a class="links" >Donation</a></li>
             <li><a class="links" >Contact</a></li>
             <li><a class="links" >About</a></li>
         </ul>
@@ -33,8 +33,8 @@
     <main>
         <section class="first">
             <h1 class="first-heading animate">CHANGE THE LIFE OF THOSE <br> WHO HAVE NO <span class="text">HOPE</span></h1>
-            <h5 class="first-subtext animate2">BE THE REASON SOMEONE SMILES TODAY</h5>
-            <h5 class="first-subtext animate2">Made By Tushar Tiwari</h5>
+            <h5 class="first-subtext animate2">BE THE REASON SOMEONE SMILES TODAY. Made By Tushar Tiwari</h5>
+
 
                 <form action="/donation" method=get>
                 <button id="donate" type="submit"> DONATE NOW</button>
